# my-agent

./: .env  .env.example  README.md  package-lock.json  package.json  requirements.txt
data/: agent.db  agent.db-shm  agent.db-wal
frontend/: app.js  index.html  settings.js  style.css
legacy_python/: pyproject.toml
legacy_python/src/agent/: main.py
legacy_python/src/agent/api/: app.py
legacy_python/src/agent/api/routes/: health.py  tasks.py
legacy_python/src/agent/config/: settings.py
legacy_python/src/agent/domain/: enums.py
legacy_python/src/agent/domain/schemas/: llm.py  risk.py  task.py
legacy_python/src/agent/infrastructure/context/: compressor.py
legacy_python/src/agent/infrastructure/llm/: gemini_client.py  switcher.py
legacy_python/src/agent/infrastructure/persistence/: sqlite_repo.py
legacy_python/src/agent/security/: path_validator.py  risk_engine.py
legacy_python/src/agent/services/: audit_service.py
prisma/: schema.prisma
src/: index.ts
src/agent/: main.py
src/agent/api/: app.py
src/agent/api/websocket/: __init__.py  hitl_manager.py
src/agent/config/: settings.py
src/agent/domain/schemas/: __init__.py  audit.py
src/agent/infrastructure/execution/: sandbox.py  (+1 more)
src/agent/security/: path_validator.py  policies.py
src/agent/services/: orchestrator.py
src/api/: server.ts
src/config/: config_manager.ts  settings.ts
src/domain/: schemas.ts
src/execution/: sandbox.ts  ssh_client.ts
src/llm/: universal_adapter.ts
src/security/: path_validator.ts  risk_engine.ts
src/services/: memory_manager.ts  orchestrator.ts
(+2 files in other folders)
