[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autonomous-os-agent"
version = "2.0.0"
description = "Autonomous OS Agent 2.0 - Zero-Trust, HITL, Dynamic LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "asyncssh>=2.17.0",
    "aiosqlite>=0.20.0",
    "tenacity>=9.0.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
